tests/cases/ok/string_postfix.p4
def main() -> None:
    print("hello"[1])
    print("hello"[1:4])
    print(("ab" + "cd")[1])
    print(("ab" + "cd")[1:3])
