tests/cases/fail/ord_arg_type.p4
def main() -> None:
    print(ord("x"))
